# FluidSimulation

./: .gitignore  CMakeLists.txt  Colorizer.h  Config.h  ConfigInitializer.cpp  ConfigParser.cpp  ConfigParser.h  Controller.cpp  Fluid.cpp  README.md  Simulation.h  SimulationBox.cpp  Source.cpp
configs/: config_1.txt  config_10.txt  config_11.txt  config_12.txt  config_13.txt  config_14.txt  config_15.txt  config_2.txt  config_3.txt  config_4.txt  config_5.txt  config_6.txt  config_7.txt  config_8.txt  config_9.txt
src/: Colorizer.cpp  ConfigInitializer.h  Controller.h  Fluid.h  GraphicsManager.cpp  GraphicsManager.h  Simulation.cpp  SimulationBox.h  Source.h  main.cpp
